Adding graphs and correlation

--- a/Regression/Linear Regression/main.ipynb
+++ b/Regression/Linear Regression/main.ipynb
@@ -19,7 +19,7 @@
     {
      "data": {
       "text/plain": [
-       "('medical.csv', <http.client.HTTPMessage at 0x296d84db210>)"
+       "('medical.csv', <http.client.HTTPMessage at 0x1d48a6d7590>)"
       ]
      },
      "execution_count": 1,
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "ecd2db9b",
    "metadata": {},
    "outputs": [
@@ -3820,9 +3820,9 @@
     "\n",
     "medical_df.age.describe()\n",
     "\n",
-    "fig = px.histogram(medical_df,x='age',marginal='box',nbins=47,title='Distribution of age')\n",
-    "fig.update_layout(bargap=0.1)\n",
-    "fig.show()\n",
+    "age_fig = px.histogram(medical_df,x='age',marginal='box',nbins=47,title='Distribution of age')\n",
+    "age_fig.update_layout(bargap=0.1)\n",
+    "age_fig.show()\n",
     "\n",
     "# fig = px.histogram(medical_df,x='bmi',marginal='boxs',color_discrete_sequence=['red'],title='Distribution of BMI')\n",
     "# fig.update_layout(bargap=0.1)\n",
@@ -3831,7 +3831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "80985573",
    "metadata": {},
    "outputs": [
@@ -3849,7 +3849,7 @@
        "Name: age, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
